# excape

./: .flake8  .gitignore  .travis.yml  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
notebooks/: enrichment_example.ipynb
src/bio2bel_excape/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py
tests/: __init__.py  cases.py  data.tsv  test_enrich.py  test_populate.py
