##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bio2bel_excape
version = 0.0.1-dev
url = https://github.com/bio2bel/excape
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
license = MIT
license_file = LICENSE
description = Bio2BEL ExCAPE-DB.
long_description = file: README.rst
keywords =
    Biological Expression Language
    Systems Pharmacology

[options]
install_requires =
    bio2bel
    sqlalchemy
    pandas
    tqdm
    pybel
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
